--- a/project-Intership/src/app/shared/components/header/header.component.html
+++ b/project-Intership/src/app/shared/components/header/header.component.html
@@ -5,4 +5,5 @@
         <p class="text-font text-font-a">HỆ THỐNG GIẢI TRÌNH VÀ TRUY XUẤT NGUỒN GỐC GỖ</p>
         <p class="text-font text-font-b">HAWA DUE DILIGENCE SYSTEM</p>
     </div>
+    <button type="button" class="btn btn-primary" (click) ="logOut()">Đăng xuất</button>
 </div>
