--- a/project-Intership/src/app/dashboard/info-user/form-user-hawa/form-user-hawa.component.scss
+++ b/project-Intership/src/app/dashboard/info-user/form-user-hawa/form-user-hawa.component.scss
@@ -25,3 +25,15 @@ label{
         margin-left: 19px;
     }
 }
+
+.form-control{
+    width: 354px;
+}
+
+.ant-picker {
+    width: 354px;
+    height: calc(1.5em + 0.75rem + 2px);
+    border-radius: 0.25rem;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+}
