--- a/project-Intership/src/app/dashboard/dashboard.component.html
+++ b/project-Intership/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<!-- <app-header></app-header>
+<app-header></app-header>
 <div class="d-flex">
   <ul class="p-2" nz-menu nzMode="vertical">
     <li nz-submenu nzTitle="Thông tin tài khoản" nzIcon="user" nzOpen></li>
@@ -8,12 +8,12 @@
   <div class="form">
     <router-outlet></router-outlet>
   </div>
-</div> -->
+</div>
 
-<div>
+<!-- <div>
   <button class="btn btn-primary" [appHighlight]="true">BT1</button>
   <button class="btn btn-primary" [appHighlight]="false">BT2</button>
 
   <button class="btn btn-primary" *ngIf="true">BT1</button>
   <button class="btn btn-primary" *ngIf="false">BT2</button>
-</div>
+</div> -->
