--- a/project-Intership/src/app/employee/manage-employee/manage-employee.component.scss
+++ b/project-Intership/src/app/employee/manage-employee/manage-employee.component.scss
@@ -1,24 +1,26 @@
-table, th, td {
-    border: 1px solid black;
-    text-align: center;
-  }
+table,
+th,
+td {
+  border: 1px solid black;
+  text-align: center;
+}
 
-  .main-text {
-    &:hover {
-      text-decoration: underline;
-    }
+.main-text {
+  &:hover {
+    text-decoration: underline;
   }
-  
-  .conten-bg {
-    background: #acec6bb9;
-    border-radius: 10px;
-  }
+}
 
-  .search{
-    height: 35px;
-    width: 200px;
-  }
+.conten-bg {
+  background: #acec6bb9;
+  border-radius: 10px;
+}
 
-  .cursor{
-    cursor: pointer;
-  }
+.search {
+  height: 35px;
+  width: 200px;
+}
+
+.cursor {
+  cursor: pointer;
+}
