--- a/project-Intership/src/app/login/login.component.html
+++ b/project-Intership/src/app/login/login.component.html
@@ -20,7 +20,7 @@
                 <div class="input-group-prepend">
                     <div class="input-group-text fa fa-lock icon"></div>
                 </div>
-                <input type="password" class="form-control" id="inlineFormInputGroup" placeholder="password"
+                <input type="password" class="form-control" id="inlineFormInputGroup1" placeholder="password"
                     formControlName="password">
             </div>
             <div class="font-word-red">
