--- a/project-Intership/src/app/dashboard/info-user/form-user-hawa/form-user-hawa.component.scss
+++ b/project-Intership/src/app/dashboard/info-user/form-user-hawa/form-user-hawa.component.scss
@@ -1,32 +1,32 @@
-.form{
+.form {
     display: flex;
     justify-content: space-evenly;
     background: white;
     margin: 30px;
 }
-.form1{
+.form1 {
     display: flex;
 }
 
-label{
+label {
     width: 319px;
     font-weight: 500;
 }
-.font-text{
-    &-1{
+.font-text {
+    &-1 {
         font-weight: 700;
         font-size: 24px;
         margin-left: 19px;
     }
 
-    &-2{
+    &-2 {
         font-weight: 500;
         font-size: 18px;
         margin-left: 19px;
     }
 }
 
-.form-control{
+.form-control {
     width: 354px;
 }
 
@@ -36,4 +36,76 @@ label{
     border-radius: 0.25rem;
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
+}
+
+.display-img {
+    margin: 5px;
+    width: 60px;
+    height: 60px;
+    border: 1px solid #ced4da;
+    border-radius: 8px;
+    position: relative;
+}
+
+.display-none {
+    display: none;
+}
+
+img {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    object-fit: contain;
+}
+
+.display-img {
+    display: block;
+    &:hover {
+        .icon-delete-image {
+            display: block;
+        }
+        img {
+            opacity: 0.5;
+        }
+    }
+
+    // box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
+
+    // img {
+    //     opacity: 0.5;
+    //     width: 100%;
+    //     height: 100%;
+    //     border-radius: 8px;
+    //     object-fit: contain;
+    // }
+}
+
+.perspective-image {
+    margin: 5px;
+    width: 60px;
+    height: 60px;
+    border: #cccccc 2px dashed;
+    background-color: #f2f2f2;
+    color: #cccccc;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.upload-image {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.icon-delete-image {
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    padding-right: 2px;
+    display: none;
 }
