--- a/project-Intership/src/app/login/login.component.html
+++ b/project-Intership/src/app/login/login.component.html
@@ -30,6 +30,9 @@
                 </ng-container>
             </div>
             <button class="font-button btn btn-primary" type="button" (click)="onSubmitForm()">Đăng nhập</button>
+            <a class="cursor-pointer" [routerLink]="['/sign-up']">
+                Bạn chưa có tài khoản? - Đăng ký tại đây
+            </a>
         </div>
     </div>
 </div>
